# Algorithm_and_Analysis_Group

./: .gitignore  .gitignore copy  CLAUDE.md  Makefile  README.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/integrations/: claude.manifest.json  cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
samples/: test.json
specs/20260413-202436-corpuses-public-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260413-202436-corpuses-public-api/checklists/: requirements.md
specs/20260413-202436-corpuses-public-api/contracts/: corpus-api.md
specs/20260418-123831-rawprofile-onehot-encoding/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/20260418-123831-rawprofile-onehot-encoding/checklists/: requirements.md
specs/20260501-143010-benchmark-all-cases/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260501-143010-benchmark-all-cases/checklists/: requirements.md
src/: main.py  menu.py
src/services/: __init__.py  args.py  constants.py  dataset.py  helper.py  jsonio.py  menu.py  runner.py
src/services/dto/: __init__.py  profiles.py  storages.py
src/services/search/: __init__.py  benchmark.py  distance.py  storages.py  topk.py
src/services/search/strategies/: __init__.py  base.py  baseline.py  kdtree.py
tests/: __init__.py  test_baseline.py  test_benchmark_all_cases.py  test_distance.py  test_equivalence.py  test_exceptions.py  test_jsonio.py  test_kdtree.py  test_main.py  test_pipeline.py  test_scale_smoke.py  test_topk.py
